@@ -1,3 +1,7 @@
+2007-10-31  Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/Calendar.py: added capitalize() to months/days; dst()
+	* src/plugins/holidays.xml: uses dst() Daylight Saving Time function
+
 2007-10-31 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/plugins/all_relations.py: use collapse family
 	* src/Relationship.py: add collopse equal family
